--- a/samples/AndroidSample/AndroidSample/Properties/AndroidManifest.xml
+++ b/samples/AndroidSample/AndroidSample/Properties/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.pspdfkit.sample">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="29" />
 	<application android:label="@string/app_name" android:largeHeap="true" android:theme="@style/AppTheme">
-		<activity android:name="com.pspdfkit.ui.PdfActivity" />
+		<activity android:name="com.pspdfkit.ui.PdfActivity" android:windowSoftInputMode="adjustNothing" />
 	</application>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
