--- a/nuget/pspdfkit-android.nuspec
+++ b/nuget/pspdfkit-android.nuspec
@@ -23,8 +23,9 @@
         <dependencies>
             <group targetFramework="MonoAndroid9.0">
                 <dependency id="Xamarin.AndroidX.Legacy.Support.V4" version="1.0.0.7" include="All" />
-                <dependency id="Xamarin.AndroidX.AppCompat" version="1.2.0.7" include="All" />
-                <dependency id="Xamarin.AndroidX.RecyclerView" version="1.2.0" include="All" />
+                <dependency id="Xamarin.AndroidX.AppCompat" version="1.3.0" include="All" />
+                <dependency id="Xamarin.AndroidX.Core" version="1.6.0" include="All" />
+                <dependency id="Xamarin.AndroidX.RecyclerView" version="1.2.1" include="All" />
                 <dependency id="Xamarin.AndroidX.CardView" version="1.0.0.8" include="All" />
                 <dependency id="Xamarin.AndroidX.GridLayout" version="1.0.0.7" include="All" />
                 <dependency id="Xamarin.AndroidX.Palette" version="1.0.0.7" include="All" />
@@ -33,7 +34,7 @@
                 <dependency id="Xamarin.AndroidX.MultiDex" version="2.0.1.7" include="All" />
                 <dependency id="Xamarin.AndroidX.Browser" version="1.3.0.5" include="All" />
                 <dependency id="Square.OkHttp3" version="4.9.1" include="All" />
-                <dependency id="Xamarin.Kotlin.StdLib" version="1.5.10" include="All" />
+                <dependency id="Xamarin.Kotlin.StdLib" version="1.5.21" include="All" />
                 <dependency id="Xamarin.Android.ReactiveX.RxAndroid" version="2.1.1.1" include="All" />
                 <dependency id="Xamarin.Android.ReactiveX.RxJava" version="2.2.10.1" include="All" />
             </group>
