--- a/samples/AndroidSample/AndroidSample/AndroidSample.csproj
+++ b/samples/AndroidSample/AndroidSample/AndroidSample.csproj
@@ -16,7 +16,7 @@
     <AndroidApplication>True</AndroidApplication>
     <AssemblyName>AndroidSample</AssemblyName>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
-    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
     <AndroidDexTool>d8</AndroidDexTool>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
@@ -33,6 +33,7 @@
     <ConsolePause>false</ConsolePause>
     <AndroidSupportedAbis>arm64-v8a;x86;x86_64;armeabi-v7a</AndroidSupportedAbis>
     <AndroidR8ExtraArguments>--pg-conf "$(MSBuildProjectDirectory)\pspdfkit-proguard.cfg"</AndroidR8ExtraArguments>
+    <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -90,8 +91,9 @@
   <ItemGroup>
     <PackageReference Include="AndHUD" Version="1.4.3" />
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.7" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.7" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.0" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" version="1.3.0" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.6.0" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1" />
     <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.8" />
     <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.7" />
     <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.7" />
@@ -100,7 +102,7 @@
     <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.7" />
     <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.3.0.5" />
     <PackageReference Include="Square.OkHttp3" Version="4.9.1" />
-    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.5.10" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.5.21" />
     <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid" Version="2.1.1.1" />
     <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.10.1" />
   </ItemGroup>
