--- a/samples/PSPDFCatalog/PSPDFCatalog.csproj
+++ b/samples/PSPDFCatalog/PSPDFCatalog.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>PSPDFCatalog</RootNamespace>
     <AssemblyName>PSPDFCatalog</AssemblyName>
-    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -37,6 +37,10 @@
     <AndroidTlsProvider>btls</AndroidTlsProvider>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <AndroidR8ExtraArguments>--pg-conf "$(MSBuildProjectDirectory)\..\AndroidSample\AndroidSample\pspdfkit-proguard.cfg"</AndroidR8ExtraArguments>
+    <AndroidPackageFormat></AndroidPackageFormat>
+    <EnableLLVM>false</EnableLLVM>
+    <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -237,9 +241,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.7" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.7" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" version="1.3.0" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat.Resources" Version="1.1.0.1" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.0" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.6.0" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1" />
     <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.8" />
     <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.7" />
     <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.7" />
@@ -248,11 +253,11 @@
     <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.7" />
     <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.3.0.5" />
     <PackageReference Include="Square.OkHttp3" Version="4.9.1" />
-    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.5.10" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.5.21" />
     <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid" Version="2.1.1.1" />
     <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.10.1" />
     <PackageReference Include="AndHUD" Version="1.4.3" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Plugin.CurrentActivity" Version="2.1.0.4" />
     <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
