--- a/samples/XamarinForms/Droid/XFSample.Droid.csproj
+++ b/samples/XamarinForms/Droid/XFSample.Droid.csproj
@@ -103,7 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.7" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" version="1.3.0" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.0" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat.Resources" Version="1.1.0.1" />
     <PackageReference Include="Xamarin.AndroidX.Core" Version="1.6.0" />
     <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1" />
