--- a/samples/PSPDFCatalog/PSPDFCatalog.csproj
+++ b/samples/PSPDFCatalog/PSPDFCatalog.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>PSPDFCatalog</RootNamespace>
     <AssemblyName>PSPDFCatalog</AssemblyName>
-    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -37,10 +37,12 @@
     <AndroidTlsProvider>btls</AndroidTlsProvider>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <AndroidR8ExtraArguments>--pg-conf "$(MSBuildProjectDirectory)\..\AndroidSample\AndroidSample\pspdfkit-proguard.cfg"</AndroidR8ExtraArguments>
-    <AndroidPackageFormat></AndroidPackageFormat>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
     <EnableLLVM>false</EnableLLVM>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     <AndroidPackageFormat>apk</AndroidPackageFormat>
+    <RunWithWarnings>true</RunWithWarnings>
+    <AndroidSigningStorePass></AndroidSigningStorePass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -240,24 +242,24 @@
     <AndroidAsset Include="Assets\JohnAppleseed.p12" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.10" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.3" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.14" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.4.2.1" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat.Resources" Version="1.1.0.1" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.6.0.3" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.3" />
-    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.11" />
-    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.10" />
-    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.10" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0.4" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.3.1.3" />
-    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.10" />
-    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.3.0.8" />
-    <PackageReference Include="Square.OkHttp3" Version="4.9.2" />
-    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.5.31.2" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.8.0.1" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.7" />
+    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.16" />
+    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.14" />
+    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.14" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.6.1.1" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.4.1.2" />
+    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.14" />
+    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.4.0.2" />
+    <PackageReference Include="Square.OkHttp3" Version="4.9.3.1" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.7.0" />
     <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid" Version="2.1.1.1" />
-    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.21.2" />
-    <PackageReference Include="AndHUD" Version="1.4.3" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.21.7" />
+    <PackageReference Include="AndHUD" Version="1.5.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Plugin.CurrentActivity" Version="2.1.0.4" />
     <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
