--- a/PSPDFKit.Android/PSPDFKit.Android.csproj
+++ b/PSPDFKit.Android/PSPDFKit.Android.csproj
@@ -12,7 +12,7 @@
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AssemblyName>PSPDFKit.Android</AssemblyName>
-    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v13.0</TargetFrameworkVersion>
     <JavaOptions>$(JavaOptions) -noverify </JavaOptions>
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodeGenTarget>XAJavaInterop1</AndroidCodeGenTarget>
@@ -74,14 +74,14 @@
     <!-- <EmbeddedReferenceJar Include="Jars\rxandroid-2.1.0.jar" /> -->
     <!-- <EmbeddedReferenceJar Include="Jars\rxjava-2.2.4.jar" /> -->
     <!-- <EmbeddedReferenceJar Include="Jars\reactive-streams-1.0.2.jar" /> -->
-    <EmbeddedReferenceJar Include="Jars\relinker-1.4.3.jar" />
+    <EmbeddedReferenceJar Include="Jars\relinker-1.4.5.jar" />
     <EmbeddedReferenceJar Include="Jars\yearclass-2.0.0.jar" />
     <!-- <EmbeddedReferenceJar Include="Jars\okhttp-3.9.0.jar" /> -->
     <!-- <EmbeddedReferenceJar Include="Jars\logging-interceptor-3.9.0.jar" /> -->
     <!-- <EmbeddedReferenceJar Include="Jars\okio-1.13.0.jar" /> -->
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\pspdfkit-8.5.0.aar" />
+    <LibraryProjectZip Include="Jars\pspdfkit-8.7.3.aar" />
   </ItemGroup>
   <!-- <ItemGroup>
     <EmbeddedJar Include="Jars\YouTubeAndroidPlayerApi-1.2.2\libs\YouTubeAndroidPlayerApi.jar">
@@ -89,21 +89,30 @@
     </EmbeddedJar>
   </ItemGroup> -->
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.14" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.5.1" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.9.0" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.7" />
-    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.16" />
-    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.14" />
-    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.14" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.6.1.1" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.5.1" />
-    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.14" />
-    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.4.0.2" />
-    <PackageReference Include="Square.OkHttp3" Version="4.9.3.2" />
-    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.7.10" />
-    <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid" Version="2.1.1.1" />
-    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.21.7" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.19" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.1.3" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.10.1.2" />
+    <PackageReference Include="Xamarin.AndroidX.Compose.Runtime" Version="1.4.3.2" />
+    <PackageReference Include="Xamarin.AndroidX.Compose.Runtime.RxJava3" Version="1.4.3.2" />
+    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.1.4.6" />
+    <PackageReference Include="Xamarin.AndroidX.ExifInterface" Version="1.3.6.3" />
+    <PackageReference Include="Xamarin.AndroidX.Fragment" Version="1.6.1" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.3.1" />
+    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.21" />
+    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.19" />
+    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.19" />
+    <PackageReference Include="Xamarin.AndroidX.Preference" Version="1.2.1" />
+    <PackageReference Include="Xamarin.AndroidX.ViewPager2" Version="1.0.0.21" />
+    <PackageReference Include="Xamarin.AndroidX.WebKit " Version="1.7.0.1" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.9.0.2" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.6.1.3" />
+    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.19" />
+    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.5.0.3" />
+    <PackageReference Include="Square.OkHttp3" Version="4.11.0.2" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.9.0.1" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.9.0.1" />
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava3.RxAndroid" Version="3.0.2.4" />
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava3.RxJava" Version="3.1.6.3" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
