--- a/samples/PSPDFCatalog/PSPDFCatalog.csproj
+++ b/samples/PSPDFCatalog/PSPDFCatalog.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>PSPDFCatalog</RootNamespace>
     <AssemblyName>PSPDFCatalog</AssemblyName>
-    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v13.0</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -242,27 +242,35 @@
     <AndroidAsset Include="Assets\JohnAppleseed.p12" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.14" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.5.1" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat.Resources" Version="1.1.0.1" />
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.9.0" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.7" />
-    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.16" />
-    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.14" />
-    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.14" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.6.1.1" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.5.1" />
-    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.14" />
-    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.4.0.2" />
-    <PackageReference Include="Square.OkHttp3" Version="4.9.3.2" />
-    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.7.10" />
-    <PackageReference Include="Xamarin.Android.ReactiveX.RxAndroid" Version="2.1.1.1" />
-    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava" Version="2.2.21.7" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.19" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.1.3" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat.Resources" Version="1.1.0.2" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.10.1.2" />
+    <PackageReference Include="Xamarin.AndroidX.Compose.Runtime" Version="1.4.3.2" />
+    <PackageReference Include="Xamarin.AndroidX.Compose.Runtime.RxJava3" Version="1.4.3.2" />
+    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.1.4.6" />
+    <PackageReference Include="Xamarin.AndroidX.Fragment" Version="1.6.1" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.3.1" />
+    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.21" />
+    <PackageReference Include="Xamarin.AndroidX.GridLayout" Version="1.0.0.19" />
+    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.19" />
+    <PackageReference Include="Xamarin.AndroidX.Preference" Version="1.2.1" />
+    <PackageReference Include="Xamarin.AndroidX.ViewPager2" Version="1.0.0.21" />
+    <PackageReference Include="Xamarin.AndroidX.WebKit " Version="1.7.0.1" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.9.0.2" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.6.1.3" />
+    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.19" />
+    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.5.0.3" />
+    <PackageReference Include="Square.OkHttp3" Version="4.11.0.2" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.9.0.1" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.9.0.1" />
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava3.RxAndroid" Version="3.0.2.4" />
+    <PackageReference Include="Xamarin.Android.ReactiveX.RxJava3.RxJava" Version="3.1.6.3" />
     <PackageReference Include="AndHUD" Version="1.5.0" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Plugin.CurrentActivity" Version="2.1.0.4" />
-    <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.8.0" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.1.0-beta" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
